--- a/WindowsFormsApplication1/App.config
+++ b/WindowsFormsApplication1/App.config
@@ -1,6 +1,10 @@
 <?xml version="1.0"?>
 <configuration>
-    <startup> 
-        
-    <supportedRuntime version="v2.0.50727"/></startup>
+  <startup>
+    <supportedRuntime version="v2.0.50727"/>
+  </startup>
+<appSettings file="">
+    <clear />
+    <add key="ConexionBD" value="server=localhost\SQLSERVER2012; user=USER; password=PASSWORD; database=PROBANDO;"/>
+  </appSettings>
 </configuration>
