Se crea el servicio de usuario para el login

--- a/WindowsFormsApplication1/App.config
+++ b/WindowsFormsApplication1/App.config
@@ -5,6 +5,6 @@
   </startup>
 <appSettings file="">
     <clear />
-    <add key="ConexionBD" value="server=localhost\SQLSERVER2012; user=USER; password=PASSWORD; database=PROBANDO;"/>
+    <add key="connectionString" value="server=localhost\SQLSERVER2012; user=USER; password=PASSWORD; database=PROBANDO;"/>
   </appSettings>
 </configuration>
