--- a/WindowsFormsApplication1/MercadoEnvio.csproj
+++ b/WindowsFormsApplication1/MercadoEnvio.csproj
@@ -75,11 +75,11 @@
     <Compile Include="ABM Usuario\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="ABM Visibilidad\Form1.cs">
+    <Compile Include="ABM Visibilidad\MainVisibilidad.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ABM Visibilidad\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ABM Visibilidad\MainVisibilidad.Designer.cs">
+      <DependentUpon>MainVisibilidad.cs</DependentUpon>
     </Compile>
     <Compile Include="Calificar\Form1.cs">
       <SubType>Form</SubType>
@@ -97,6 +97,7 @@
     <Compile Include="DataManagers\DataManagerRoles.cs" />
     <Compile Include="DataManagers\DataManagerRubros.cs" />
     <Compile Include="DataManagers\DataManagerUsuario.cs" />
+    <Compile Include="DataManagers\DataManagerVisibilidad.cs" />
     <Compile Include="Entidades\Estado.cs" />
     <Compile Include="Entidades\Funcionalidad.cs" />
     <Compile Include="Entidades\Login.cs" />
@@ -104,6 +105,7 @@
     <Compile Include="Entidades\Rol.cs" />
     <Compile Include="Entidades\Rubro.cs" />
     <Compile Include="Entidades\Usuario.cs" />
+    <Compile Include="Entidades\Visibilidad.cs" />
     <Compile Include="Facturas\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -142,6 +144,7 @@
     <Compile Include="Servicios\RolesServices.cs" />
     <Compile Include="Servicios\RubrosServices.cs" />
     <Compile Include="Servicios\UsuarioService.cs" />
+    <Compile Include="Servicios\VisibilidadServices.cs" />
     <EmbeddedResource Include="ABM Rol\AltaRol.resx">
       <DependentUpon>AltaRol.cs</DependentUpon>
     </EmbeddedResource>
@@ -150,6 +153,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ABM Rubro\MainRubro.resx">
       <DependentUpon>MainRubro.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABM Visibilidad\MainVisibilidad.resx">
+      <DependentUpon>MainVisibilidad.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ComprarOfertar\MainPublicacion.resx">
       <DependentUpon>MainPublicacion.cs</DependentUpon>
@@ -190,6 +196,7 @@
     <Content Include="Scripts\SP\SP_BloqUser.sql" />
     <Content Include="Scripts\SP\SP_FindRoles.sql" />
     <Content Include="Scripts\SP\SP_FindRubros.sql" />
+    <Content Include="Scripts\SP\SP_FindVisibilidades.sql" />
     <Content Include="Scripts\SP\SP_GetFuncionalidades.sql" />
     <Content Include="Scripts\SP\SP_GetPublicaciones.sql" />
     <Content Include="Scripts\SP\SP_GetRolByDescripcion.sql" />
@@ -197,6 +204,7 @@
     <Content Include="Scripts\SP\SP_GetRolFuncionalidades.sql" />
     <Content Include="Scripts\SP\SP_GetRubros.sql" />
     <Content Include="Scripts\SP\SP_GetUsuarioByUserName.sql" />
+    <Content Include="Scripts\SP\SP_GetVisibilidades.sql" />
     <Content Include="Scripts\SP\SP_IncrementCountLogin.sql" />
     <Content Include="Scripts\SP\SP_InsertRol.sql" />
     <Content Include="Scripts\SP\SP_InsertRolFuncionalidad.sql" />
