--- a/WindowsFormsApplication1/MercadoEnvio.csproj
+++ b/WindowsFormsApplication1/MercadoEnvio.csproj
@@ -196,6 +196,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\SP\SP_DeleteRolFuncionalidad.sql" />
     <Content Include="Scripts\SP\SP_UpdateRol.sql" />
     <Content Include="Scripts\SP\SP_UpdateVisibilidad.sql" />
     <None Include="Resources\fastreverse.JPG" />
