Actualización de scripts

--- a/WindowsFormsApplication1/MercadoEnvio.csproj
+++ b/WindowsFormsApplication1/MercadoEnvio.csproj
@@ -225,8 +225,11 @@
     <Content Include="Scripts\MASTERDBA-Drop.sql" />
     <Content Include="Scripts\SP\SP_FindClientes.sql" />
     <Content Include="Scripts\SP\SP_FindEmpresas.sql" />
+    <Content Include="Scripts\SP\SP_FindPublicaciones.sql" />
     <Content Include="Scripts\SP\SP_GetRolesUsuario.sql" />
     <Content Include="Scripts\SP\SP_DeleteRolFuncionalidad.sql" />
+    <Content Include="Scripts\SP\SP_GetTipoPublicacion.sql" />
+    <Content Include="Scripts\SP\SP_GetVisibilidadPublicacion.sql" />
     <Content Include="Scripts\SP\SP_UpdateRol.sql" />
     <Content Include="Scripts\SP\SP_UpdateVisibilidad.sql" />
     <None Include="Resources\fastreverse.JPG" />
