--- a/WindowsFormsApplication1/App.config
+++ b/WindowsFormsApplication1/App.config
@@ -5,6 +5,6 @@
   <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
 <appSettings file="">
     <clear/>
-    <add key="connectionString" value="server=AR-TBERROCAL\SQLSERVER2012; user=gd; password=gd2016; database=GD1C2016;"/>
+    <add key="connectionString" value="Data Source=.\SQLSERVER2012; user=gd; password=gd2016; database=GD1C2016;"/>
   </appSettings>
 </configuration>
