--- a/WindowsFormsApplication1/App.config
+++ b/WindowsFormsApplication1/App.config
@@ -1,10 +1,12 @@
 <?xml version="1.0"?>
 <configuration>
   <startup>
-    
-  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
-<appSettings file="">
+
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+  </startup>
+  <appSettings file="">
     <clear/>
     <add key="connectionString" value="Data Source=.\SQLSERVER2012; user=gd; password=gd2016; database=GD1C2016;"/>
+    <add key="systemTime" value="26/06/2016 00:00:00 AM"/>
   </appSettings>
 </configuration>
