--- a/WindowsFormsApplication1/MercadoEnvio.csproj
+++ b/WindowsFormsApplication1/MercadoEnvio.csproj
@@ -310,51 +310,72 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\MASTERDBA-Drop.sql" />
-    <Content Include="Scripts\SP\SP_FindClientes.sql" />
-    <Content Include="Scripts\SP\SP_FindEmpresas.sql" />
-    <Content Include="Scripts\SP\SP_FindPublicaciones.sql" />
-    <Content Include="Scripts\SP\SP_GetClienteByTipoDocNroDoc.sql" />
-    <Content Include="Scripts\SP\SP_GetEmpresaByCUIT.sql" />
-    <Content Include="Scripts\SP\SP_GetRolesUsuario.sql" />
-    <Content Include="Scripts\SP\SP_DeleteRolFuncionalidad.sql" />
-    <Content Include="Scripts\SP\SP_InsertCliente.sql" />
-    <Content Include="Scripts\SP\SP_InsertEmpresa.sql" />
-    <Content Include="Scripts\SP\SP_InsertUsuario.sql" />
-    <Content Include="Scripts\SP\SP_InsertUsuarioRol.sql" />
-    <Content Include="Scripts\SP\SP_UpdateCliente.sql" />
-    <Content Include="Scripts\SP\SP_UpdateEmpresa.sql" />
-    <Content Include="Scripts\SP\SP_UpdateRol.sql" />
-    <Content Include="Scripts\SP\SP_UpdateVisibilidad.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_BloqUser.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_DeleteRol.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_DeleteRolFuncionalidad.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_DeleteUsuario.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_DeleteUsuarioRol.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_DeleteUsuariosRol.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_DeleteVisibilidad.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_FindClientes.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_FindEmpresas.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_FindFacturas.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_FindPublicaciones.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_FindRoles.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_FindRubros.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_FindVisibilidades.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetCantidadCalificacionesDadas.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetClienteByTipoDocNroDoc.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetComprasPendientesCalificacion.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetDetallesFactura.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetEmpresaByCUIT.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetFacturas.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetFuncionalidadByDescripcion.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetFuncionalidades.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetListadoClientesProductosComprados.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetListadoVendedoresFacturas.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetListadoVendedoresMontos.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetListadoVendedoresProductosNoVendidos.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetPublicaciones.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetPublicacionesVisibilidad.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetRolByDescripcion.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetRoles.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetRolesUsuario.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetRolFuncionalidades.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetRubros.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetUltimasCalificaciones.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetUsuarioByUserName.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetVisibilidadByDescripcion.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetVisibilidades.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_IncrementCountLogin.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_InsertCliente.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_InsertCompra.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_InsertEmpresa.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_InsertNewCalificacion.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_InsertOferta.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_InsertRol.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_InsertRolFuncionalidad.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_InsertRubro.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_InsertUsuario.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_InsertUsuarioRol.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_InsertVisibilidad.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_ResetCountLogin.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_UpdateCliente.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_UpdateEmpresa.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_UpdateRol.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_UpdateVisibilidad.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.VW_Calificaciones.View.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.VW_Compras.View.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.VW_Facturas.View.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.VW_Publicaciones.View.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.VW_Usuarios.View.sql" />
+    <Content Include="Scripts\SP\Script.sql" />
     <None Include="Resources\fastreverse.JPG" />
     <None Include="Resources\Back.jpg" />
     <None Include="Resources\Forward.jpg" />
     <None Include="Resources\fastforward.JPG" />
     <Content Include="Scripts\MASTERDBA - Carga Inicial v2.sql" />
     <Content Include="Scripts\MASTERDBA - Creacion Tablas v2.sql" />
-    <Content Include="Scripts\SP\SP_BloqUser.sql" />
-    <Content Include="Scripts\SP\SP_DeleteRol.sql" />
-    <Content Include="Scripts\SP\SP_DeleteUsuariosRol.sql" />
-    <Content Include="Scripts\SP\SP_DeleteVisibilidad.sql" />
-    <Content Include="Scripts\SP\SP_FindRoles.sql" />
-    <Content Include="Scripts\SP\SP_FindRubros.sql" />
-    <Content Include="Scripts\SP\SP_FindVisibilidades.sql" />
-    <Content Include="Scripts\SP\SP_GetFuncionalidadByDescripcion.sql" />
-    <Content Include="Scripts\SP\SP_GetFuncionalidades.sql" />
-    <Content Include="Scripts\SP\SP_GetPublicaciones.sql" />
-    <Content Include="Scripts\SP\SP_GetPublicacionesVisibilidad.sql" />
-    <Content Include="Scripts\SP\SP_GetRolByDescripcion.sql" />
-    <Content Include="Scripts\SP\SP_GetRoles.sql" />
-    <Content Include="Scripts\SP\SP_GetRolFuncionalidades.sql" />
-    <Content Include="Scripts\SP\SP_GetRubros.sql" />
-    <Content Include="Scripts\SP\SP_GetUsuarioByUserName.sql" />
-    <Content Include="Scripts\SP\SP_GetVisibilidadByDescripcion.sql" />
-    <Content Include="Scripts\SP\SP_GetVisibilidades.sql" />
-    <Content Include="Scripts\SP\SP_IncrementCountLogin.sql" />
-    <Content Include="Scripts\SP\SP_InsertRol.sql" />
-    <Content Include="Scripts\SP\SP_InsertRolFuncionalidad.sql" />
-    <Content Include="Scripts\SP\SP_InsertRubro.sql" />
-    <Content Include="Scripts\SP\SP_InsertVisibilidad.sql" />
-    <Content Include="Scripts\SP\SP_ResetCountLogin.sql" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
