--- a/WindowsFormsApplication1/MercadoEnvio.csproj
+++ b/WindowsFormsApplication1/MercadoEnvio.csproj
@@ -324,11 +324,14 @@
     <Content Include="Scripts\SP\MASTERDBA.SP_FindRoles.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_FindRubros.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_FindVisibilidades.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetCalificacionesUsuario.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_GetCantidadCalificacionesDadas.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetClienteById.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_GetClienteByTipoDocNroDoc.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_GetComprasPendientesCalificacion.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_GetDetallesFactura.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_GetEmpresaByCUIT.StoredProcedure.sql" />
+    <Content Include="Scripts\SP\MASTERDBA.SP_GetEmpresaById.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_GetFacturas.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_GetFuncionalidadByDescripcion.StoredProcedure.sql" />
     <Content Include="Scripts\SP\MASTERDBA.SP_GetFuncionalidades.StoredProcedure.sql" />
